syntax = "proto2";

package frankenpaxos.matchmakermultipaxos;

import "scalapb/scalapb.proto";

option (scalapb.options) = {
  package_name: "frankenpaxos.matchmakermultipaxos"
  flat_package: true
};

message DoNothingProto {}

message DoubleLeaderReconfigurationProto {
    required int32 first_reconfiguration_delay_ms = 1;
    repeated int32 first_reconfiguration = 2;
    required int32 acceptor_failure_delay_ms = 3;
    required int32 acceptor_failure = 4;
    required int32 second_reconfiguration_delay_ms = 5;
    repeated int32 second_reconfiguration = 6;
}

message DriverWorkloadProto {
  oneof value {
    DoNothingProto do_nothing = 1;
    DoubleLeaderReconfigurationProto double_leader_reconfiguration = 2;
  }
}
